Workaround for fractional scaling rendering

don't set the devicepixelratio on the intermediate images but only on
the last one using scaled sizes for the images in between, or
KSvg::paint gets confused

the proper solution is to make ksvg support natively fractional scaling

BUG:477457